--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Import styles */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("css/navbar.css");
-@import url("css/footer.css");
+@import url("../css/navbar.css");
+@import url("../css/footer.css");
 
 
 /* Overall CSS */
@@ -83,7 +83,7 @@ a {
 
   .section_1_right h2 {font-size: 2em; color: black; margin-top: 20px; line-height: 120%;}
   
-  .section_1_left { grid-area: section_1_left; background: url(images/welcome-image-dan-thumbs-up.png) no-repeat center; background-size: 150px;}
+  .section_1_left { grid-area: section_1_left; background: url(../images/welcome-image-dan-thumbs-up.png) no-repeat center; background-size: 150px;}
   
 /* Section 2 project case study */
 
@@ -283,7 +283,7 @@ a {
 
   .section_1_right h2 {font-size: 2.5em; color: black; margin-top: 20px; line-height: 120%;}
   
-  .section_1_left { grid-area: section_1_left; border: yellow 0px solid; background: url(images/welcome-image-dan-thumbs-up.png) no-repeat center; background-size: 200px;}
+  .section_1_left { grid-area: section_1_left; border: yellow 0px solid; background: url(../images/welcome-image-dan-thumbs-up.png) no-repeat center; background-size: 200px;}
 
   .section_2 { 
     grid-template-rows: 150px 200px;
@@ -343,7 +343,7 @@ a {
 
   .section_1_right h2 {font-size: 3em; color: black; margin-top: 20px; line-height: 120%;}
   
-  .section_1_left { grid-area: section_1_left; border: yellow 0px solid; background: url(images/welcome-image-dan-thumbs-up.png) no-repeat center; background-size: 250px;}
+  .section_1_left { grid-area: section_1_left; border: yellow 0px solid; background: url(../images/welcome-image-dan-thumbs-up.png) no-repeat center; background-size: 250px;}
 
   .section_2 { 
     grid-template-rows: 175px 250px;
@@ -403,7 +403,7 @@ a {
 
   .section_1_right h2 {font-size: 4em; color: black; margin-top: 20px; line-height: 120%;}
   
-  .section_1_left { grid-area: section_1_left; border: yellow 0px solid; background: url(images/welcome-image-dan-thumbs-up.png) no-repeat center; background-size: 350px;}
+  .section_1_left { grid-area: section_1_left; border: yellow 0px solid; background: url(../images/welcome-image-dan-thumbs-up.png) no-repeat center; background-size: 350px;}
 
   .section_2 { 
     grid-template-rows: 275px 300px;
@@ -463,7 +463,7 @@ a {
 
   .section_1_right h2 {font-size: 5em; color: black; margin-top: 20px; line-height: 120%;}
   
-  .section_1_left { grid-area: section_1_left; border: yellow 0px solid; background: url(images/welcome-image-dan-thumbs-up.png) no-repeat center; background-size: 450px;}
+  .section_1_left { grid-area: section_1_left; border: yellow 0px solid; background: url(../images/welcome-image-dan-thumbs-up.png) no-repeat center; background-size: 450px;}
 
   .section_2 { 
     grid-template-rows: 350px 450px;
@@ -579,7 +579,7 @@ a {
 
 .blog_001 {grid-area: "blog_001"; margin: 10px 10px 0px 10px; padding: 25px 25px 25px 0px; border-top: gainsboro 4px groove;}
 
-.blog_001 .blog_img_001 {height: 200px; margin: 10px 0px 10px 0px; background-color: grey; background-image: url(images/color-photo-1.jpg); background-repeat: no-repeat; background-size: cover;}
+.blog_001 .blog_img_001 {height: 200px; margin: 10px 0px 10px 0px; background-color: grey; background-image: url(../images/color-photo-1.jpg); background-repeat: no-repeat; background-size: cover;}
 
 .blog_001 h2 {font-size: 2em; text-transform: uppercase;}
 
@@ -591,7 +591,7 @@ a {
 
 .blog_002 {grid-area: "blog_002"; margin: 10px 10px 0px 10px; padding: 25px 25px 25px 0px; border-top: gainsboro 4px groove;}
 
-.blog_002 .blog_img_002 {height: 200px; margin: 10px 0px 10px 0px; background-color: grey; background-image: url(images/color-photo-2.jpg); background-repeat: no-repeat; background-size: cover;}
+.blog_002 .blog_img_002 {height: 200px; margin: 10px 0px 10px 0px; background-color: grey; background-image: url(../images/color-photo-2.jpg); background-repeat: no-repeat; background-size: cover;}
 
 .blog_002 h2 {font-size: 2em; text-transform: uppercase;}
 
@@ -603,7 +603,7 @@ a {
 
 .blog_003 {grid-area: "blog_003"; margin: 10px 10px 10px 10px; padding: 25px 25px 25px 0px; border-top: gainsboro 4px groove;}
 
-.blog_003 .blog_img_003 {height: 200px; margin: 10px 0px 10px 0px; background-color: grey; background-image: url(images/color-photo-3.jpg); background-repeat: no-repeat; background-size: cover;}
+.blog_003 .blog_img_003 {height: 200px; margin: 10px 0px 10px 0px; background-color: grey; background-image: url(../images/color-photo-3.jpg); background-repeat: no-repeat; background-size: cover;}
 
 .blog_003 h2 {font-size: 2em; text-transform: uppercase;}
 
